finished styles on mobile portrait

--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -30,7 +30,7 @@
                 {% csrf_token %}
                 {{ user_addressform | as_bootstrap }}
                 <div id="update-address-btn-wrapper" class="ha">
-                <button type="submit" class="btn btn update-address-btn">Update Address!</button>
+                <button type="submit" class="btn update-address-btn">Update Address!</button>
             </div>
             </form>
         </div>
