--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -73,7 +73,7 @@
                             <div class="input-group-addon">{{item.quantity}}</div>
                         </div>
                     </div>
-                    <div id="amend-btn-wrapper" class="ha">
+                    <div class="amend-btn-wrapper ha">
                         <button type="submit" class="btn btn-primary amend-btn"><span class="glyphicon glyphicon-edit"
                                 aria-hidden="true"></span> Amend</button>
                     </div>
