--- a/products/templates/productdetail.html
+++ b/products/templates/productdetail.html
@@ -80,7 +80,7 @@
                     </div>
                 </form>
                 <div id="to-products-btn-wrapper" class="ha">
-                    <a id="to-products-btn" href="{% url 'products' %}" class="btn">Back to products</a>
+                    <a id="to-products-btn" href="{% url 'products' %}" class="btn">Back Products</a>
                 </div>
             </div>
         </div>
