--- a/static/scss/_partials/portrait-mobile/pages/_productdetails-page.scss
+++ b/static/scss/_partials/portrait-mobile/pages/_productdetails-page.scss
@@ -29,6 +29,8 @@
 }
 
 #to-products-btn {
+    width: 48vw;
+    font-size: 5.0vw;
     background-color: orange;
     color: black;
     transition: color .3s ease-in-out;
