--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -63,13 +63,19 @@
                     <div class="stats-key"><i class="fa fa-eye"></i></div>
                     <div class="stats-value">{{ product.view_count }}</div>
                     <div class="stats-key"><i class="fa fa-comment"></i></div>
+                    {% if product.review_count > 0 %}
+                    <div class="stats-value">
+                        <a href="{% url 'get_reviews' product.id %}">{{ product.review_count }}</a>
+                    </div>
+                    {% else %}
                     <div class="stats-value">{{ product.review_count }}</div>
+                    {% endif %}
                     <div class="stats-key">Sold:</div>
                     <div class="stats-value">{{ product.ordered_pcs }}</div>
                 </div>
                 <br>
                 <p><b>Our price: {{ product.price }} EUR</b></p>
-                <form id="addcart{{product.id}}" method="POST" action="{% url 'add_to_cart' product.id %}">
+                <form method="POST" action="{% url 'add_to_cart' product.id %}">
                     {% csrf_token %}
                     <div class="input-group">
                         <input name="quantity" type="number" min="1" max="999" class="form-control"
