--- a/reviews/templates/editreview.html
+++ b/reviews/templates/editreview.html
@@ -8,7 +8,7 @@
         {{ form | as_bootstrap }}
         <div id="review-send-btn-wrapper" class="ha">
             <button id="review-send-btn" type="submit" class="btn">Save</button>
-            <a id="review-cancel-btn" href="{% url 'product_detail' product_pk %}" class="btn">Cancel</a>
+            <a id="review-cancel-btn" href="{% url 'product_detail' pk %}" class="btn">Cancel</a>
         </div>
     </form>
 </div>
