--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -92,7 +92,7 @@
   .input-group-addon {
     font-size: 4vw;
   }
-  #amend-btn-wrapper {
+  .amend-btn-wrapper {
     width: 100%;
   }
   .amend-btn {
@@ -233,6 +233,8 @@
     margin-bottom: 4vw;
   }
   #to-products-btn {
+    width: 48vw;
+    font-size: 5.0vw;
     background-color: orange;
     color: black;
     -webkit-transition: color .3s ease-in-out;
@@ -269,7 +271,7 @@
   }
   .product-headline {
     font-family: "Dosis", sans-serif;
-    font-size: 7.5vw;
+    font-size: 6.5vw;
   }
   .product-description {
     min-height: 40px;
@@ -306,7 +308,7 @@
   .form-control,
   .update-address-btn {
     font-family: "Dosis", sans-serif;
-    font-size: 5.5vw;
+    font-size: 4.5vw;
     font-weight: 900;
   }
   .tab-content {
@@ -399,10 +401,11 @@
     -webkit-transition: color .3s ease-in-out;
     transition: color .3s ease-in-out;
   }
-  .reviewsWrapper {
+  .reviews-wrapper {
     padding-top: 5vw;
     padding-bottom: 20vw;
     background-color: #9e988fcb;
+    min-height: 82vh;
   }
   .edit-review-wrapper {
     padding-bottom: 25vw;
@@ -414,7 +417,6 @@
   }
   #id_image {
     height: 13vw;
-    padding-top: 13px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -448,23 +450,23 @@
   #review-cancel-btn:hover {
     color: darkred;
   }
-  #edit-review-btn {
+  .edit-review-btn {
     width: 8vw;
     position: absolute;
     left: 62vw;
     top: 30vw;
   }
-  #review-del-req-btn {
+  .review-del-req-btn {
     width: 8vw;
     position: absolute;
     left: 62vw;
     top: 44vw;
   }
-  #edit-review-btn {
+  .edit-review-btn {
     font-size: 7.5vw;
     color: orange;
   }
-  #review-del-req-btn {
+  .review-del-req-btn {
     font-size: 7.5vw;
     color: red;
   }
@@ -476,7 +478,7 @@
         flex-wrap: wrap;
     width: 100%;
   }
-  #review-btn-bar {
+  .review-btn-bar {
     margin-top: 4vw;
     margin-bottom: 4vw;
     width: 100%;
@@ -487,46 +489,45 @@
         -ms-flex-pack: center;
             justify-content: center;
   }
-  #back-to-products-btn {
-    width: 35vw;
+  .back-to-products-btn,
+  .back-to-reviews-btn,
+  .return-product-btn,
+  .review-details-btn {
+    width: 33vw;
     font-family: "Dosis", sans-serif;
-    font-size: 3.5vw;
+    font-size: 4.5vw;
     color: #414141;
-    margin-right: 2px;
     -webkit-transition: color .3s ease-in-out;
     transition: color .3s ease-in-out;
+  }
+  .back-to-products-btn {
+    margin-right: 2px;
     background-color: lightblue;
   }
-  #back-to-reviews-btn {
-    width: 35vw;
-    font-family: "Dosis", sans-serif;
-    font-size: 3.5vw;
-    color: #414141;
+  .back-to-reviews-btn {
     margin-left: 2px;
-    -webkit-transition: color .3s ease-in-out;
-    transition: color .3s ease-in-out;
     background-color: orange;
   }
-  #review-details-btn {
-    width: 46vw;
-    font-size: 5.5vw;
-    color: #414141;
-    -webkit-transition: color .3s ease-in-out;
-    transition: color .3s ease-in-out;
-    background-color: orange;
+  .return-product-btn {
+    background-color: lightblue;
+    margin: 2px;
   }
-  #back-to-products-btn:hover, #back-to-reviews-btn:hover, #review-details-btn:hover {
+  .review-details-btn {
+    background-color: orange;
+    margin: 2px;
+  }
+  .back-to-products-btn:hover, .back-to-reviews-btn:hover, .review-details-btn:hover, return-product-btn:hover {
     color: darkred;
   }
   .review-headline {
     font-family: "Dosis", sans-serif;
-    font-size: 6.5vw;
+    font-size: 7.5vw;
     margin-bottom: 6vw;
   }
   .review-headline a {
     text-decoration: none;
   }
-  #confirm-delete-popup {
+  .confirm-delete-popup {
     background-color: beige;
     border-radius: 5px;
     border: 1px solid grey;
@@ -545,32 +546,27 @@
     -webkit-transition: opacity .3s ease-in-out;
     transition: opacity .3s ease-in-out;
   }
-  #delete-popup-message {
+  .delete-popup-message {
     width: 80%;
     margin-top: 2vw;
     margin-bottom: 2vw;
     font-family: "Dosis", sans-serif;
     font-size: 6vw;
   }
-  #delete-btn-bar {
-    width: 100%;
-  }
-  #delete-confirm-btn {
+  .delete-confirm-btn {
     background-color: lightcoral;
     color: #414141;
     margin-right: 2px;
     width: 35vw;
-  }
-  #delete-confirm-btn a {
-    color: #414141;
     -webkit-transition: color .3s ease-in-out;
     transition: color .3s ease-in-out;
     text-decoration: none;
   }
-  #delete-confirm-btn a:hover {
+  .delete-confirm-btn:hover {
     color: whitesmoke;
   }
-  #delete-cancel-btn {
+  .delete-cancel-btn {
+    width: 35vw;
     background-color: lightslategray;
     margin-left: 2px;
     font-family: "Dosis", sans-serif;
@@ -578,7 +574,7 @@
     -webkit-transition: color .3s ease-in-out;
     transition: color .3s ease-in-out;
   }
-  #delete-cancel-btn:hover {
+  .delete-cancel-btn:hover {
     color: darkred;
   }
   .wishlist-wrapper {
@@ -713,8 +709,11 @@
   }
   #wishlist-badge-bottom {
     position: absolute;
-    top: -3vw;
-    left: 9vw;
+    top: -2vw;
+    left: 8.7vw;
+    padding-left: 2vw;
+    padding-right: 2vw;
+    max-width: none;
   }
   .badge-wishlist {
     border-radius: 3vw;
@@ -722,12 +721,19 @@
   }
   #cart-badge-bottom {
     position: absolute;
-    top: -3vw;
-    left: 9vw;
+    top: -2vw;
+    left: 8.7vw;
+    padding-left: 1.5vw;
+    padding-right: 1.5vw;
+    max-width: none;
   }
   .badge-cart {
     border-radius: 3vw;
     font-size: 4vw;
+  }
+  .badge {
+    padding-right: 5px;
+    padding-left: 5px;
   }
   .label-warning[href],
   .badge-warning[href] {
