--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -50,7 +50,7 @@
         {% else %}
         <div id="empty-wishlist-wrapper">
             <p>No products in your wishlist.</p>
-            <a id="emptywishlist-product-link" href="{% url 'products' %}"><span
+            <a id="empty-wishlist-product-link" class="ha" href="{% url 'products' %}"><span
                     class="glyphicon glyphicon-apple active-app"></span></a>
         </div>
         {% endif %}
