--- a/templates/base.html
+++ b/templates/base.html
@@ -35,28 +35,28 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right desktop-navbar">
-                    <li>
+                    <li class="desktop-navbar-icons">
                         {% if app_path == "/" %}
                         <a href="{% url 'index' %}"><i class="fa fa-home active-app"></i></a>
                         {% else %}
                         <a href="{% url 'index' %}"><i class="fa fa-home"></i></a>
                         {% endif %}
                     </li>
-                    <li>
+                    <li class="desktop-navbar-icons">
                         {% if "product" in app_path %}
                         <a href="{% url 'products' %}"><span class="glyphicon glyphicon-apple active-app"></span></a>
                         {% else %}
                         <a href="{% url 'products' %}"><span class="glyphicon glyphicon-apple"></span></a>
                         {% endif %}
                     </li>
-                    <li>
+                    <li class="desktop-navbar-icons">
                         {% if "review" in app_path %}
                         <a href="{% url 'get_reviews' %}"><i class="fa fa-comment active-app"></i></a>
                         {% else %}
                         <a href="{% url 'get_reviews' %}"><i class="fa fa-comment"></i></a>
                         {% endif %}
                     </li>
-                    <li>
+                    <li class="desktop-navbar-icons">
                         {% if "wishlist" in app_path %}
                         <a href="{% url 'view_wishlist' %}"><i class="fa fa-star active-app"></i>
                             {% else %}
@@ -68,7 +68,7 @@
                             </a>
                     </li>
                     {% if user.is_authenticated %}
-                    <li>
+                    <li class="desktop-navbar-icons">
                         {% if "profile" in app_path %}
                         <a href="{% url 'profile' %}"><i class="fa fa-user active-app"></i></a>
                         {% else %}
@@ -77,14 +77,14 @@
                     </li>
                     <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out"></i></a></li>
                     {%  else %}
-                    <li>
+                    <li class="desktop-navbar-icons">
                         {% if "register" in app_path %}
                         <a href="{% url 'registration' %}"><i class="fa fa-user-plus active-app"></i></a>
                         {%  else %}
                         <a href="{% url 'registration' %}"><i class="fa fa-user-plus"></i></a>
                         {% endif %}
                     </li>
-                    <li>
+                    <li class="desktop-navbar-icons">
                         {% if "login" in app_path %}
                         <a href="{% url 'login' %}"><i class="fa fa-sign-in active-app"></i></a>
                         {%  else %}
@@ -92,7 +92,7 @@
                         {% endif %}
                     </li>
                     {% endif %}
-                    <li>
+                    <li class="desktop-navbar-icons">
                         {% if "cart" in app_path %}
                         <a href="{% url 'view_cart' %}"><i class="fa fa-shopping-cart active-app"></i>
                             {% else %}
